# ABY-PADEC

./: CMakeLists.txt
jnicode/: JNITest.cpp  JNITest.java  Makefile
rejni/: CMakeLists.txt  Client.java  JNIClient.cpp  JNIClient.h  JNIClient.java  JNIServer.cpp  JNIServer.h  JNIServer.java  Makefile  NativeMeth.cpp  NativeMeth.h  NativeMeth.java  Server.java  make_lib_shared.sh
src/abycore/circuit/: circuit.cpp  circuit.h
tinkering/: CMakeLists.txt  tinkering_client.cpp  tinkering_server.cpp
tinkering/circ_lib/: circs_client.cpp  circs_client.h  circs_client.hpp  circs_server.cpp  circs_server.h  circs_server.hpp
